[FIX]: add background color to header on small screens

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -22,6 +22,7 @@
   .page_header .hamburger_menu_btn {
     display: none;
   }
+
   .page_header .hamburger_menu {
     position: unset;
     z-index: unset;
@@ -50,12 +51,13 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   gap: 1.8rem;
 
   clip-path: circle(0 at 50% 0);
   transition: clip-path 0.7s ease, top 0.7s ease;
+  background-color: var(--primary-color);
 }
 
 .menu_visible {
